fix: increase padding for body elements to improve layout spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,8 +29,8 @@ body {
 }
 
 #body > *{
-  padding-right: 5%;
-  padding-left: 5%;
+  padding-right: 15%;
+  padding-left: 15%;
 }
 
 #body{
